--- a/client/style.css
+++ b/client/style.css
@@ -1,7 +1,8 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #7dbaf6;
+    background-image: linear-gradient(#9fc3e9, #23303d); 
+    /* background-color: #7dbaf6; */
     color: #333;
     display: flex;
     justify-content: center;
